order_system/k8s/ordersystem_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ordersystem-ingress
  namespace: sse
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - "server.ssebao.shop"
    secretName: seho-com-tls
  rules:
  - host: server.ssebao.shop
    http:
      paths:
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: ordersystem-service
            port:
              number: 80
